updating for newest site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet"> 
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">  -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/a80c6dbc29.js" crossorigin="anonymous"></script>
@@ -27,13 +27,13 @@
     <!-- <div class="wrapper"> -->
       <section class="fixed-navbar">
         <div class="navi navbar-name">
-          <svg class="circle-around-name" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-            <circle  cx="50" cy="50" r="50"/>
+          <svg class="circle-around-name" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg">
+            <circle  cx="50" cy="50" r="48"/>
           </svg>
-          <div class="first-letter">B</div>
-          <div class="first-part">lake</div>
-          <div class="second-letter">A</div>
-          <div class="second-part">lexander</div>
+          <p class="first-letter">B</p>
+          <p class="first-part">lake</p>
+          <p class="second-letter">A</p>
+          <p class="second-part">lexander</p>
         </div>
         <div class="nav-buttons">
           <!-- <button class="nav-button show-home">Home</button> -->
@@ -254,11 +254,11 @@
           </div>
         </section>
 
-        <div class="about-me-header">
-          <h2 class="about-me-label">About me</h2>
-        </div>
-
+        <!-- <div class="about-me-header">
+        </div> -->
+        
         <section class="about-me-container">
+          <h2 class="about-me-label">About me</h2>
           <div class="about-me-body">
             <p class="am-sentence ams1">I am a full stack web developer based out of Los Angeles.</p>   
             <!-- <p class="am-sentence ams2">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty. </br>
@@ -271,85 +271,16 @@
         </section>
 
         <section class="contact-section">
-          <div class="about-me-trigger"></div>
-          <div class="background-gradient"></div>
-          <div class="lets-talk-container">
-            <div class="lets-talk-primary-letters">
-              <h2 class="lets-talk-letter ltp">L</h2>
-              <h2 class="lets-talk-letter ltp">e</h2>
-              <h2 class="lets-talk-letter ltp">t</h2>
-              <h2 class="lets-talk-letter ltp">'</h2>
-              <h2 class="lets-talk-letter ltp">s</h2>
-              <h2 class="lets-talk-letter ltp">t</h2>
-              <h2 class="lets-talk-letter ltp">a</h2>
-              <h2 class="lets-talk-letter ltp">l</h2>
-              <h2 class="lets-talk-letter ltp">k</h2>
-              <h2 class="lets-talk-letter ltp">!</h2>
-            </div>
-            <div class="lets-talk-secondary-letters">
-              <h2 class="lets-talk-letter lts">L</h2>
-              <h2 class="lets-talk-letter lts">e</h2>
-              <h2 class="lets-talk-letter lts">t</h2>
-              <h2 class="lets-talk-letter lts">'</h2>
-              <h2 class="lets-talk-letter lts">s</h2>
-              <h2 class="lets-talk-letter lts">t</h2>
-              <h2 class="lets-talk-letter lts">a</h2>
-              <h2 class="lets-talk-letter lts">l</h2>
-              <h2 class="lets-talk-letter lts">k</h2>
-              <h2 class="lets-talk-letter lts">!</h2>
-            </div>
-          </div>
-          <!-- <div class="contact-card-bg"></div>   -->
-          <div class="contact-card-outer">        
-            <div class="contact-card-inner">
-              <div class="contact-sect-email qq">
-                <div class="email-me">Email me:</div>
-                <div class="email">BlakeAlexanderDev@gmail.com</div>
-              </div>
-              <div class="contact-sect-call qq">
-                <div class="call-me">Call me:</div>
-                <div class="call">1(310)463-3588</div>
-              </div>
-              <div class="contact-sect-work qq">
-                <div class="my-work">My work:</div>
-                <div class="work">
-                  <a class="gh-link" href="https://github.com/Blalexander" target="_blank">
-                    <i class="fab fa-github-square" style="color:white"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="contact-sect-resume qq">
-                <div class="my-resume">My resume: </div>
-    
-                <div class="resume">
-                  <a href="resume.pdf" class="resume-dl">
-                    <svg width="70" height="80" viewBox="0 0 70 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <rect x="1" y="1" width="68" height="78" rx="4" stroke="white" stroke-width="2"/>
-                      <circle cx="35" cy="14" r="5" fill="white"/>
-                      <path d="M48 29.2067C48 33.0058 42.1797 31.8272 35 31.8272C27.8203 31.8272 22 33.0058 22 29.2067C22 25.4076 27.8203 22 35 22C42.1797 22 48 25.4076 48 29.2067Z" fill="white"/>
-                      <line x1="15" y1="46" x2="55" y2="46" stroke="white" stroke-width="2"/>
-                      <line x1="15" y1="56" x2="55" y2="56" stroke="white" stroke-width="2"/>
-                      <line x1="15" y1="67" x2="55" y2="67" stroke="white" stroke-width="2"/>
-                    </svg>                  
-                  </a>
-                </div>
-              </div>
+          <div class="contact-card">        
+            <h2 class="contact-me-label">Let's Talk!</h2>
+            <div class="contact-sect-email qq">
+              <div class="email">BlakeAlexanderDev@gmail.com</div>
             </div>
           </div>
         </section>
     </main>
 
     <div class="contact-card-bg"></div>  
-    <div class="contact-card-bg-mountain mountain-right">
-      <svg width="1920" height="680" viewBox="0 0 1920 680" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M0 240L285.5 252.5L400 192.5L513 211L699.5 192.5L786.5 240L860 174.5L965 211L1066 174.5L1172 192.5L1248 174.5H1295L1344 163.5L1481.5 114.5L1520 126L1645 66.5L1671 82.5L1805.5 0L1853 82.5L1920 126V680H0V240Z" fill="#000E13"/>
-        </svg>
-    </div>
-    <div class="contact-card-bg-mountain mountain-left">
-      <svg width="1920" height="677" viewBox="0 0 1920 677" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M1920 479.5L1634.5 249.5L1520 189.5L1407 208L1220.5 189.5L1133.5 237L1060 171.5L955 208L854 171.5H824.5L791 162L728.5 91.5L681 0L609 63.5L555.5 79.5L438.5 111.5L400 123L275 63.5L249 79.5L183 217L67 79.5L0 123V677H1920V479.5Z" fill="#000E13"/>
-        </svg>
-    </div>
   <!-- </div> -->
 
 
